--- a/uptown/properties-single-user.html
+++ b/uptown/properties-single-user.html
@@ -132,19 +132,9 @@
 						      <p> Una casa acogedora en las afueras de madrid, situada cerca de la sierra con un amplio jardin y habitaciones espaciosas. También tiene una piscina climatizada y un garage. Tendrás una amplia zona de ocio para realizar todo tipo de eventos, ¿vas a desaprovechar esta oportunidad? 
 								  La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
 								<p>La casa tiene 1200 metros cuadrados, 6 habitaciones, 2 baños amplios, 1 jacuzzi, 1 piscina climatizadad y 1 garaje.</p>
-								<div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-									<div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
-									var setting = {"height":531,"width":803,"zoom":13,"queryString":"San Lorenzo de El Escorial, España","place_id":"ChIJg8YyLS8KQQ0RvM-WF9d8jqc","satellite":false,"centerCoord":[40.591323456735495,-4.143906849999996],"cid":"0xa78e7cd71796cfbc","lang":"es","cityUrl":"/spain/san-lorenzo-de-el-escorial-31465","id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"158891"};
-									var d = document;
-									var s = d.createElement('script');
-									s.src = 'https://1map.com/js/script-for-user.js?embed_id=158891';
-									s.async = true;
-									s.onload = function (e) {
-									  window.OneMap.initMap(setting)
-									};
-									var to = d.getElementsByTagName('script')[0];
-									to.parentNode.insertBefore(s, to);
-								  })();</script><a href="https://1map.com/es/map-embed?embed_id=158891">1 Map</a></div>
+
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12119.954069497404!2d-4.141016163730674!3d40.58600886953104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd410a40328b75a1%3A0x9bc1505ee52a51fd!2s28280%20El%20Escorial%2C%20Madrid!5e0!3m2!1ses!2ses!4v1581961235846!5m2!1ses!2ses"
+ 								width="800" height="650" frameborder="5" style="border:0;" allowfullscreen=""></iframe>
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
