--- a/uptown/properties.html
+++ b/uptown/properties.html
@@ -76,7 +76,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -94,7 +94,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -112,7 +112,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -131,7 +131,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -149,7 +149,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -167,7 +167,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -186,7 +186,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -204,7 +204,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
@@ -222,7 +222,7 @@
         				</ul>
         				<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
         				<span class="location">Oakland</span>
-        				<button class="d-flex align-items-center justify-content-center btn-custom">
+        				<button class="d-flex align-items-center justify-content-center btn-custom"><a href="http://127.0.0.1:5500/uptown/favs.html">
         					<span class="icon-star-o"></span>
         				</button>
         			</div>
